fixed header z-index issue

--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,7 @@ p {
 
 /* header */
 nav {
+	z-index: 1;
 	position: sticky;
 	top: 0;
 
